--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 
 </head>
 <body>
+    <!-- navbar -->
+    <nav id="navbar"></nav>
+    <!-- about -->
+    <section id="about"></section>
+    <!-- skills -->
+    <section id="skills"></section>
+    <!-- work -->
+    <section id="work"></section>
+    <!-- testimonial -->
+    <section id="testimonials"></section>
+    <!-- contact -->
+    <section id="contact"></section>  
     
 </body>
 </html>
