--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
 <body>
     <!-- navbar -->
     <nav id="navbar"></nav>
+        <div class="navbar__logo">
+            <i class="logo">zzz</i>
+            <a href="#">SSol</a>
+        </div>
+        <div>
+            <ul class="navbar__menu">
+                <li class="navbar__menu--item">Home</li>
+                <li class="navbar__menu--item">About</li>
+                <li class="navbar__menu--item">Skills</li>
+                <li class="navbar__menu--item">My work</li>
+                <li class="navbar__menu--item">Testimonial</li>
+                <li class="navbar__menu--item">Contact</li>
+            </ul>
+        </div>
+
     <!-- about -->
     <section id="about"></section>
     <!-- skills -->
