--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav id="navbar"></nav>
+    <nav id="navbar">
         <div class="navbar__logo">
-            <i class="logo">zzz</i>
+            <img src="imgs/favicon.png" alt="" class="logo"/>
+            <!-- <i class="fab fa-diaspora"></i> -->
             <a href="#">SSol</a>
         </div>
         <ul class="navbar__menu">
@@ -31,8 +32,18 @@
             <li class="navbar__menu--item">Testimonial</li>
             <li class="navbar__menu--item">Contact</li>
         </ul>
+    </nav>
 
+    <!-- home -->
+    <section id="home">
+        <img src="imgs/profile.png" alt="SSol's profile photo" class="home__avatar"/>
+        <h1 class="home__title">Hello, <br />I'm SSol!!</h1>
+        <h2 class="home__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+        <button class="home__contact">Contact Me</button>
+
+    </section>
     <!-- about -->
+
     <section id="about"></section>
     <!-- skills -->
     <section id="skills"></section>
