--- a/index.html
+++ b/index.html
@@ -40,13 +40,45 @@
         <h1 class="home__title">Hello, <br />I'm SSol!!</h1>
         <h2 class="home__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
         <button class="home__contact">Contact Me</button>
+    </section>
+
+    <!-- about -->
+    <section id="about">
+        <h1>About</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. Magna eget est lorem ipsum dolor sit amet consectetur. Ipsum suspendisse ultrices gravida dictum fusce.
+        </p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                <div class="major_title">Full stack</div>
+                <div class="major__description">HTML, CSS, JavaScript, Python</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                </div>
+                <div class="major_title">Finance</div>
+                <div class="major__description">Research, Investment, Trading</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-solid fa-golf-ball-tee"></i>
+                </div>
+                <div class="major_title">Golf</div>
+                <div class="major__description">Driver, Wood, Iron, Putter</div>
+            </div>
+        </div>
+
 
     </section>
-    <!-- about -->
 
-    <section id="about"></section>
     <!-- skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        
+    </section>
     <!-- work -->
     <section id="work"></section>
     <!-- testimonial -->
