--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                 <div class="major__description">Driver, Wood, Iron, Putter</div>
             </div>
         </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="imgs/jobs/samsung-securities.png" alt="samsung" class="job__logo">
+                <p class="job__name">Lorem ipsum dolor sit amet</p>
+                <p class="job__period">Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="job">
+                <img src="imgs/jobs/hyundai-securities-removebg.png" alt="hyundai" class="job__logo">
+                <p class="job__name">Lorem ipsum dolor sit amet</p>
+                <p class="job__period">Lorem ipsum dolor sit amet</p>
+            </div>
+        </div>
 
 
     </section>
