--- a/index.html
+++ b/index.html
@@ -160,8 +160,77 @@
             </div>
         </div>
     </section>
+
     <!-- work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category_count">8</span></button>
+            <button class="category__btn">Front-end<span class="category_count">3</span></button>
+            <button class="category__btn">Back-end<span class="category_count">3</span></button>
+            <button class="category__btn">Mobile<span class="category_count">2</span></button>
+        </div>
+
+        <div class="work_projects">
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/1-solid.png" alt="1">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/2-solid.png" alt="2">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/3-solid.png" alt="3">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/4-solid.png" alt="4">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/5-solid.png" alt="5">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/6-solid.png" alt="6">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/7-solid.png" alt="7">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/8-solid.png" alt="8">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- testimonial -->
     <section id="testimonials"></section>
     <!-- contact -->
