--- a/index.html
+++ b/index.html
@@ -231,8 +231,28 @@
             </a>
         </div>
     </section>
+
     <!-- testimonial -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
+                <div class="testimonial__speech--bubble">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
+                    <p class="name"><a href="https://www.youtube.com" target="blank">Buster Moon</a> / Sing2gether</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
+                <div class="testimonial__speech--bubble">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
+                    <p class="name"><a href="https://www.youtube.com" target="blank">Buster Moon</a> / Sing2gether</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- contact -->
     <section id="contact"></section>  
     
