--- a/index.html
+++ b/index.html
@@ -253,8 +253,23 @@
             </div>
         </div>
     </section>
+
     <!-- contact -->
-    <section id="contact"></section>  
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">jmkeyn92@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://www.youtube.com" target="blank">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="https://github.com/jmkeyn92/portfolio" target="blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
+        <p class="contact__rights">
+            2022 SSol - All rights reserved
+        </p>
+    </section>  
     
 </body>
 </html>
