--- a/alignment.html
+++ b/alignment.html
@@ -28,6 +28,7 @@
         
         .inner3 {
             transform: translate(50%, 50%);
+            /* 자체 크기의 가로, 세로 50% 여기서는 100, 50의 50%인 50, 25를 이동 */
         }
         
         .box4 h1 {
