--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 	<link rel="icon" type="image/png" href="imgs/favicon.png" />
 	<script src="https://kit.fontawesome.com/d059e74951.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
-	
-	<!-- font-family: 'Open Sans', sans-serif; -->
 	<link rel="stylesheet" href="style.css" />
 	<script src="main.js" defer></script>
 
@@ -25,7 +23,7 @@
 			<a href="#" class="SSol">SSol</a>
 		</div>
 		<ul class="navbar__menu">
-			<li class="navbar__menu--item">Home</li>
+			<li class="navbar__menu--item active">Home</li>
 			<li class="navbar__menu--item">About</li>
 			<li class="navbar__menu--item">Skills</li>
 			<li class="navbar__menu--item">My work</li>
