--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</section>
 
 	<!-- about -->
-	<section id="about">
+	<section id="about" class="section">
 		<h1>About</h1>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. Magna eget est lorem ipsum dolor sit amet consectetur. Ipsum suspendisse ultrices gravida dictum fusce.
@@ -51,40 +51,44 @@
 				<div class="major__icon">
 					<i class="fa-brands fa-js"></i>
 				</div>
-				<div class="major_title">Full stack</div>
+				<h2 class="major__title">Full stack</h2>
 				<div class="major__description">HTML, CSS, JavaScript, Python</div>
 			</div>
 			<div class="major">
 				<div class="major__icon">
 					<i class="fa-solid fa-arrow-trend-up"></i>
 				</div>
-				<div class="major_title">Finance</div>
+				<h2 class="major__title">Finance</h2>
 				<div class="major__description">Research, Investment, Trading</div>
 			</div>
 			<div class="major">
 				<div class="major__icon">
 					<i class="fa-solid fa-golf-ball-tee"></i>
 				</div>
-				<div class="major_title">Golf</div>
+				<h2 class="major__title">Golf</h2>
 				<div class="major__description">Driver, Wood, Iron, Putter</div>
 			</div>
 		</div>
 		<div class="about__jobs">
 			<div class="job">
-				<img src="imgs/jobs/samsung-securities.png" alt="samsung" class="job__logo">
-				<p class="job__name">Lorem ipsum dolor sit amet</p>
-				<p class="job__period">Lorem ipsum dolor sit amet</p>
+				<img src="imgs/jobs/samsung-securities.png" alt="samsung" class="job__logo1">
+				<div class="job__description">
+					<p class="job__name">Lorem ipsum dolor sit amet</p>
+					<p class="job__period">Lorem ipsum dolor sit amet</p>
+				</div>
 			</div>
 			<div class="job">
-				<img src="imgs/jobs/hyundai-securities-removebg.png" alt="hyundai" class="job__logo">
-				<p class="job__name">Lorem ipsum dolor sit amet</p>
-				<p class="job__period">Lorem ipsum dolor sit amet</p>
+				<img src="imgs/jobs/hyundai-securities-removebg.png" alt="hyundai" class="job__logo2">
+				<div class="job__description">
+					<p class="job__name">Lorem ipsum dolor sit amet</p>
+					<p class="job__period">Lorem ipsum dolor sit amet</p>
+				</div>
 			</div>
 		</div>
 	</section>
 
 	<!-- skills -->
-	<section id="skills">
+	<section id="skills" class="section">
 		<h1>Skills</h1>
 		<h2>Skills & Attributes</h2>
 		<p>
@@ -160,7 +164,7 @@
 	</section>
 
 	<!-- work -->
-	<section id="work">
+	<section id="work" class="section">
 		<h1>My work</h1>
 		<h3>Projects</h3>
 		<div class="work__categories">
@@ -231,7 +235,7 @@
 	</section>
 
 	<!-- testimonial -->
-	<section id="testimonials">
+	<section id="testimonials" class="section">
 		<h1>testimonials</h1>
 		<h3>See what they say about me</h3>
 		<div class="testimonials">
@@ -253,7 +257,7 @@
 	</section>
 
 	<!-- contact -->
-	<section id="contact">
+	<section id="contact" class="section">
 		<h1 class="contact__title">Let's talk</h1>
 		<h2 class="contact__email">jmkeyn92@gmail.com</h2>
 		<div class="contact__links">
