--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</section>
 
 	<!-- about -->
-	<section id="about" class="section">
+	<section id="about" class="section section__container">
 		<h1>About</h1>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. Magna eget est lorem ipsum dolor sit amet consectetur. Ipsum suspendisse ultrices gravida dictum fusce.
@@ -89,78 +89,82 @@
 
 	<!-- skills -->
 	<section id="skills" class="section">
-		<h1>Skills</h1>
-		<h2>Skills & Attributes</h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. Magna eget est lorem ipsum dolor sit amet consectetur. Ipsum suspendisse ultrices gravida dictum fusce.
-		</p>
-		<div class="skillset">
-			<div class="skillset_left">
-				<h3 class="skills">Skills</h3>
-				<div class="skill">
-					<div class="discription">
-						<span>HTML</span>
-						<span>50%</span>
+		<div class="section__container">
+			<h1>Skills</h1>
+			<h2>Skills & Attributes</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. Magna eget est lorem ipsum dolor sit amet consectetur. Ipsum suspendisse ultrices gravida dictum fusce.
+			</p>
+			<div class="skillset">
+				<div class="skillset_left">
+					<h3 class="skillset_title">Skills</h3>
+					<div class="skill">
+						<div class="skill__description">
+							<span>HTML</span>
+							<span>50%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill_value" style="width: 50%;"></div>
+						</div>
 					</div>
-					<div class="skill__bar">
-						<div class="skill_value"></div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>CSS</span>
+							<span>30%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill_value" style="width: 30%;"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>JS</span>
+							<span>10%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill_value" style="width: 10%;"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>Finance</span>
+							<span>70%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill_value" style="width: 70%;"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>Golf</span>
+							<span>10%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill_value" style="width: 10%;"></div>
+						</div>
+					</div>  
+				</div>
+				<div class="skillset_right">
+					<div class="tools">
+						<h3 class="skillset_title">Tools</h3>
+						<ul class="tools__list">
+							<li><span>Visual Studio Code</span></li>
+							<li><span>Jupyter lab</span></li>
+							<li><span>Telegram</span></li>
+						</ul>
+					</div>
+					<div class="etc">
+						<h3 class="skillset_title">Etc</h3>
+						<ul class="etc_list">
+							<li><span>Git</span></li>
+							<li><span>Bloomberg</span></li>
+						</ul>
 					</div>
 				</div>
-				<div class="skill">
-					<div class="discription">
-						<span>CSS</span>
-						<span>30%</span>
-					</div>
-					<div class="skill__bar">
-						<div class="skill_value"></div>
-					</div>
-				</div>
-				<div class="skill">
-					<div class="discription">
-						<span>JS</span>
-						<span>10%</span>
-					</div>
-					<div class="skill__bar">
-						<div class="skill_value"></div>
-					</div>
-				</div>
-				<div class="skill">
-					<div class="discription">
-						<span>Finance</span>
-						<span>70%</span>
-					</div>
-					<div class="skill__bar">
-						<div class="skill_value"></div>
-					</div>
-				</div>
-				<div class="skill">
-					<div class="discription">
-						<span>Golf</span>
-						<span>10%</span>
-					</div>
-					<div class="skill__bar">
-						<div class="skill_value"></div>
-					</div>
-				</div>  
 			</div>
-			<div class="skills_right">
-				<div class="tools">
-					<h3 class="skills">Tools</h3>
-					<ul class="tools__list">
-						<li><span>Visual Studio Code</span></li>
-						<li><span>Jupyter lab</span></li>
-						<li><span>Telegram</span></li>
-					</ul>
-				</div>
-				<div class="etc">
-					<h3 class="skills">Etc</h3>
-					<ul class="etc_list">
-						<li><span>Git</span></li>
-						<li><span>Bloomberg</span></li>
-					</ul>
-				</div>
-			</div>
+
 		</div>
+		
 	</section>
 
 	<!-- work -->
