--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					</div>
 					<div class="skill">
 						<div class="skill__description">
-							<span>JS</span>
+							<span>JavaScript</span>
 							<span>10%</span>
 						</div>
 						<div class="skill__bar">
@@ -172,10 +172,10 @@
 		<h1>My work</h1>
 		<h3>Projects</h3>
 		<div class="work__categories">
-			<button class="category__btn">All<span class="category_count">8</span></button>
-			<button class="category__btn">Front-end<span class="category_count">3</span></button>
-			<button class="category__btn">Back-end<span class="category_count">3</span></button>
-			<button class="category__btn">Mobile<span class="category_count">2</span></button>
+			<button class="category__btn active">All<span class="category__count">8</span></button>
+			<button class="category__btn">Front-end<span class="category__count">3</span></button>
+			<button class="category__btn">Back-end<span class="category__count">3</span></button>
+			<button class="category__btn">Mobile<span class="category__count">2</span></button>
 		</div>
 
 		<div class="work_projects">
