--- a/index.html
+++ b/index.html
@@ -180,56 +180,56 @@
 
 		<div class="work_projects">
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/1-solid.png" alt="1">
+				<img class="project__img" src="imgs/projects/1-solid.png" alt="1">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/2-solid.png" alt="2">
+				<img class="project__img" src="imgs/projects/2-solid.png" alt="2">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/3-solid.png" alt="3">
+				<img class="project__img" src="imgs/projects/3-solid.png" alt="3">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/4-solid.png" alt="4">
+				<img class="project__img" src="imgs/projects/4-solid.png" alt="4">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/5-solid.png" alt="5">
+				<img class="project__img" src="imgs/projects/5-solid.png" alt="5">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/6-solid.png" alt="6">
+				<img class="project__img" src="imgs/projects/6-solid.png" alt="6">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/7-solid.png" alt="7">
+				<img class="project__img" src="imgs/projects/7-solid.png" alt="7">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
 				</div>
 			</a>
 			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project_img" src="imgs/projects/8-solid.png" alt="8">
+				<img class="project__img" src="imgs/projects/8-solid.png" alt="8">
 				<div class="project__description">
 					<h3>Youtube Site</h3>
 					<span>Clone coding with HTML and CSS</span>
