--- a/index.html
+++ b/index.html
@@ -247,15 +247,15 @@
 				<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
 				<div class="testimonial__speech--bubble">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
-					<p class="name"><a href="https://www.youtube.com" target="blank">Buster Moon</a> / Sing2gether</p>
+					<p class="name"><a href="https://www.youtube.com" target="blank" class="buster">Buster Moon</a> / Sing2gether</p>
 				</div>
 			</div>
 			<div class="testimonial">
-				<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
 				<div class="testimonial__speech--bubble">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
-					<p class="name"><a href="https://www.youtube.com" target="blank">Buster Moon</a> / Sing2gether</p>
+					<p class="name"><a href="https://www.youtube.com" target="blank"class="buster">Buster Moon</a> / Sing2gether</p>
 				</div>
+				<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
 			</div>
 		</div>
 	</section>
