--- a/index.html
+++ b/index.html
@@ -169,93 +169,97 @@
 
 	<!-- work -->
 	<section id="work" class="section">
-		<h1>My work</h1>
-		<h3>Projects</h3>
-		<div class="work__categories">
-			<button class="category__btn active">All<span class="category__count">8</span></button>
-			<button class="category__btn">Front-end<span class="category__count">3</span></button>
-			<button class="category__btn">Back-end<span class="category__count">3</span></button>
-			<button class="category__btn">Mobile<span class="category__count">2</span></button>
-		</div>
-
-		<div class="work_projects">
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/1-solid.png" alt="1">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/2-solid.png" alt="2">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/3-solid.png" alt="3">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/4-solid.png" alt="4">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/5-solid.png" alt="5">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/6-solid.png" alt="6">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/7-solid.png" alt="7">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
-			<a href="https://www.youtube.com" class="project" target="blank">
-				<img class="project__img" src="imgs/projects/8-solid.png" alt="8">
-				<div class="project__description">
-					<h3>Youtube Site</h3>
-					<span>Clone coding with HTML and CSS</span>
-				</div>
-			</a>
+		<div class="section__container">
+			<h1>My work</h1>
+			<h3>Projects</h3>
+			<div class="work__categories">
+				<button class="category__btn active">All<span class="category__count">8</span></button>
+				<button class="category__btn">Front-end<span class="category__count">3</span></button>
+				<button class="category__btn">Back-end<span class="category__count">3</span></button>
+				<button class="category__btn">Mobile<span class="category__count">2</span></button>
+			</div>
+	
+			<div class="work_projects">
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/1-solid.png" alt="1">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/2-solid.png" alt="2">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/3-solid.png" alt="3">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/4-solid.png" alt="4">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/5-solid.png" alt="5">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/6-solid.png" alt="6">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/7-solid.png" alt="7">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+				<a href="https://www.youtube.com" class="project" target="blank">
+					<img class="project__img" src="imgs/projects/8-solid.png" alt="8">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone coding with HTML and CSS</span>
+					</div>
+				</a>
+			</div>
 		</div>
 	</section>
 
 	<!-- testimonial -->
 	<section id="testimonials" class="section">
-		<h1>testimonials</h1>
-		<h3>See what they say about me</h3>
-		<div class="testimonials">
-			<div class="testimonial">
-				<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
-				<div class="testimonial__speech--bubble">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
-					<p class="name"><a href="https://www.youtube.com" target="blank" class="buster">Buster Moon</a> / Sing2gether</p>
+		<div class="section__container">
+			<h1>testimonials</h1>
+			<h3>See what they say about me</h3>
+			<div class="testimonials">
+				<div class="testimonial">
+					<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
+					<div class="testimonial__speech--bubble">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
+						<p class="name"><a href="https://www.youtube.com" target="blank" class="buster">Buster Moon</a> / Sing2gether</p>
+					</div>
 				</div>
-			</div>
-			<div class="testimonial">
-				<div class="testimonial__speech--bubble">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
-					<p class="name"><a href="https://www.youtube.com" target="blank"class="buster">Buster Moon</a> / Sing2gether</p>
+				<div class="testimonial">
+					<div class="testimonial__speech--bubble">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus harum maxime doloremque placeat. Sint, mollitia expedita quaerat architecto rem dolore aperiam eligendi blanditiis in possimus omnis consectetur eius delectus molestias.</p>
+						<p class="name"><a href="https://www.youtube.com" target="blank"class="buster">Buster Moon</a> / Sing2gether</p>
+					</div>
+					<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
 				</div>
-				<img src="imgs/testimonial/buster moon.png" alt="People" class="testimonial__avatar">
 			</div>
 		</div>
 	</section>
