--- a/index.html
+++ b/index.html
@@ -22,14 +22,21 @@
 			<!-- <i class="fab fa-diaspora"></i> -->
 			<a href="#" class="SSol">SSol</a>
 		</div>
-		<ul class="navbar__menu">
-			<li class="navbar__menu--item active">Home</li>
-			<li class="navbar__menu--item">About</li>
-			<li class="navbar__menu--item">Skills</li>
-			<li class="navbar__menu--item">My work</li>
-			<li class="navbar__menu--item">Testimonial</li>
-			<li class="navbar__menu--item">Contact</li>
-		</ul>
+		<div class="navbar__menu">
+			<ul class="navbar__menu">
+				<li class="navbar__menu--item active">Home</li>
+				<li class="navbar__menu--item">About</li>
+				<li class="navbar__menu--item">Skills</li>
+				<li class="navbar__menu--item">My work</li>
+				<li class="navbar__menu--item">Testimonial</li>
+				<li class="navbar__menu--item">Contact</li>
+			</ul>
+		</div>
+
+		<!-- Toggle menu -->
+		<button class="navbar__toggle--btn">
+			<i class="fa-solid fa-bars"></i>
+		</button>
 	</nav>
 
 	<!-- home -->
