--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 		</div>
 		<div class="navbar__menu">
 			<ul class="navbar__menu">
-				<li class="navbar__menu--item active">Home</li>
-				<li class="navbar__menu--item">About</li>
-				<li class="navbar__menu--item">Skills</li>
-				<li class="navbar__menu--item">My work</li>
-				<li class="navbar__menu--item">Testimonial</li>
-				<li class="navbar__menu--item">Contact</li>
+				<li class="navbar__menu--item active" data-link="#home">Home</li>
+				<li class="navbar__menu--item" data-link="#about">About</li>
+				<li class="navbar__menu--item" data-link="#skills">Skills</li>
+				<li class="navbar__menu--item" data-link="#work">My work</li>
+				<li class="navbar__menu--item" data-link="#testimonials">Testimonial</li>
+				<li class="navbar__menu--item" data-link="#contact">Contact</li>
 			</ul>
 		</div>
 
@@ -250,7 +250,7 @@
 	<!-- testimonial -->
 	<section id="testimonials" class="section">
 		<div class="section__container">
-			<h1>testimonials</h1>
+			<h1>Testimonials</h1>
 			<h3>See what they say about me</h3>
 			<div class="testimonials">
 				<div class="testimonial">
