JS: Home transparent

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
 
 	<!-- home -->
 	<section id="home">
-		<img src="imgs/profile.png" alt="SSol's profile photo" class="home__avatar"/>
-		<h1 class="home__title">Hello, <br />I'm SSol!!</h1>
-		<h2 class="home__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
-		<button class="home__contact">Contact Me</button>
+		<div class="home__container">
+			<img src="imgs/profile.png" alt="SSol's profile photo" class="home__avatar"/>
+			<h1 class="home__title">Hello, <br />I'm SSol!!</h1>
+			<h2 class="home__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+			<button class="home__contact">Contact Me</button>
+		</div>
+
 	</section>
 
 	<!-- about -->
