--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 			<i class="fa-solid fa-bars"></i>
 		</button>
 	</nav>
-
+	
+	<!-- Arrow up -->
+	<button class="arrow--up">
+		<i class="fa-solid fa-arrow-up"></i>
+	</button>
+	
 	<!-- home -->
 	<section id="home">
 		<div class="home__container">
