--- a/index.html
+++ b/index.html
@@ -188,63 +188,63 @@
 			<h1>My work</h1>
 			<h3>Projects</h3>
 			<div class="work__categories">
-				<button class="category__btn active">All<span class="category__count">8</span></button>
-				<button class="category__btn">Front-end<span class="category__count">3</span></button>
-				<button class="category__btn">Back-end<span class="category__count">3</span></button>
-				<button class="category__btn">Mobile<span class="category__count">2</span></button>
+				<button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+				<button class="category__btn" data-filter="front--end">Front-end<span class="category__count">3</span></button>
+				<button class="category__btn" data-filter="back--end">Back-end<span class="category__count">3</span></button>
+				<button class="category__btn" data-filter="mobile">Mobile<span class="category__count">2</span></button>
 			</div>
 	
-			<div class="work_projects">
-				<a href="https://www.youtube.com" class="project" target="blank">
+			<div class="work__projects">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="front--end">
 					<img class="project__img" src="imgs/projects/1-solid.png" alt="1">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="front--end">
 					<img class="project__img" src="imgs/projects/2-solid.png" alt="2">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="front--end">
 					<img class="project__img" src="imgs/projects/3-solid.png" alt="3">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="back--end">
 					<img class="project__img" src="imgs/projects/4-solid.png" alt="4">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="back--end">
 					<img class="project__img" src="imgs/projects/5-solid.png" alt="5">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="back--end">
 					<img class="project__img" src="imgs/projects/6-solid.png" alt="6">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="mobile">
 					<img class="project__img" src="imgs/projects/7-solid.png" alt="7">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone coding with HTML and CSS</span>
 					</div>
 				</a>
-				<a href="https://www.youtube.com" class="project" target="blank">
+				<a href="https://www.youtube.com" class="project" target="blank" data-type="mobile">
 					<img class="project__img" src="imgs/projects/8-solid.png" alt="8">
 					<div class="project__description">
 						<h3>Youtube Site</h3>
