--- a/intersection_observer.html
+++ b/intersection_observer.html
@@ -14,7 +14,7 @@
         height: 300px;
         margin: 80px auto;
         background-color: plum;
-        transition: 250ms;
+        transition: 1000ms;
       }
 
       .box.active {
@@ -44,6 +44,34 @@
     <div class="box">19</div>
     <div class="box">20</div>
 
-    <script></script>
+    <script>
+      const boxes = document.querySelectorAll('.box');
+      
+      const option = {
+        root: null, // viewport
+        rootMargin: '0px',
+        threshold: 1 // 0~1(100%)
+      }
+
+      const callback = (entries, observer) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('active');
+            // console.log(entry.target);
+          } else {
+            entry.target.classList.remove('active');
+            // console.error(entry.target);
+          }
+          
+        // console.log(entries);
+        // console.log(observer);
+        });
+      };
+
+      const observer = new IntersectionObserver(callback, option);
+
+      boxes.forEach(box => observer.observe(box));
+
+    </script>
   </body>
 </html>
