--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="navbar__logo">
 			<img src="imgs/favicon.png" alt="" class="logo"/>
 			<!-- <i class="fab fa-diaspora"></i> -->
-			<a href="#" class="SSol">SSolSSol</a>
+			<a href="#" class="SSol">SSol</a>
 		</div>
 		<ul class="navbar__menu">
 			<li class="navbar__menu--item active" data-link="#home">Home</li>
